Hadoop HDFS Change Log

Release 2.8.0 - UNRELEASED

  INCOMPATIBLE CHANGE

  NEW FEATURES
    
    HDFS-7278. Add a command that allows sysadmins to manually trigger full
    block reports from a DN (cmccabe)

    HDFS-6982. nntop: top­-like tool for name node users.
    (Maysam Yabandeh via wang)

  IMPROVEMENTS

    HDFS-8549. Abort the balancer if an upgrade is in progress. (wang)

    HDFS-8818. Changes the global moveExecutor to per datanode executors and
    changes MAX_SIZE_TO_MOVE to be configurable.  (szetszwo)

    HDFS-8824. Do not use small blocks for balancing the cluster.  (szetszwo)

    HDFS-8883. NameNode Metrics : Add FSNameSystem lock Queue Length.
    (Anu Engineer via xyao)

    HDFS-8880. NameNode metrics logging. (Arpit Agarwal)

    HDFS-4396. Add START_MSG/SHUTDOWN_MSG for ZKFC
    (Liang Xie via harsh)

  OPTIMIZATIONS

  BUG FIXES

    HDFS-8219. setStoragePolicy with folder behavior is different after cluster restart.
    (surendra singh lilhore via Xiaoyu Yao)

Release 2.7.0

  INCOMPATIBLE CHANGES

  NEW FEATURES

    HDFS-3107. Introduce truncate. (Plamen Jeliazkov via shv)

    HDFS-7056. Snapshot support for truncate. (Plamen Jeliazkov and shv)

    HDFS-6673. Add delimited format support to PB OIV tool. (Eddy Xu via wang)

    HDFS-7655. Expose truncate API for Web HDFS. (yliu)

  IMPROVEMENTS

    HDFS-7470. SecondaryNameNode need twice memory when calling
    reloadFromImageFile. (zhaoyunjiong via cnauroth)

    HDFS-7606. Fix potential NPE in INodeFile.getBlocks(). (Byron Wong via shv)

    HDFS-7738. Revise the exception message for recover lease; add more truncate
    tests such as truncate with HA setup, negative tests, truncate with other
    operations and multiple truncates.  (szetszwo)

    HDFS-7058. Tests for truncate CLI. (Dasha Boudnik via shv)

    HDFS-7760. Document truncate for WebHDFS. (shv)

    HDFS-7531. Improve the concurrent access on FsVolumeList (Lei Xu via Colin
    P. McCabe)
